# krddevdays-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml  prestart.sh  pyproject.toml  status_check.sh
deploy/: deployment.nginx.yaml  deployment.yaml  docker-compose.yml  hpa.yaml  ingress.yaml  job.yaml  service.nginx.yaml  service.postgres.yaml  service.yaml
krddevdays/: settings.py  urls.py  views.py
